--- a/spring-boot-app/buildspec.yaml
+++ b/spring-boot-app/buildspec.yaml
@@ -23,7 +23,7 @@ build:
       - echo "Build completed on `date`"
 post_build:
     commands:
-      - cd spring-boot-app
+      - cd spring-boot-app/
       - echo "running tests"
       - echo "Building Docker image..."
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
