--- a/spring-boot-app/buildspec.yaml
+++ b/spring-boot-app/buildspec.yaml
@@ -33,6 +33,7 @@ phases:
     commands:
       - echo "running tests"
       - echo "Building Docker image..."
+      - DOCKER_REGISTRY_URL=$(echo "$DOCKER_REGISTRY_URL" | tr -d '\n\r')
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
       - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/sprint_boot_shopping:latest" .
       - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/sprint_boot_shopping:latest"
