--- a/spring-boot-app/buildspec.yaml
+++ b/spring-boot-app/buildspec.yaml
@@ -34,6 +34,8 @@ phases:
       - echo "running tests"
       - echo "Building Docker image..."
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
+      - echo "DOCKER_REGISTRY_USERNAME: $DOCKER_REGISTRY_USERNAME"
+      - echo "DOCKER_REGISTRY_URL: $DOCKER_REGISTRY_URL"
       - docker build -t "$DOCKER_REGISTRY_USERNAME/sprint_boot_shopping:latest" .
       - docker push "$DOCKER_REGISTRY_USERNAME/sprint_boot_shopping:latest"
       - echo "Build completed successfully!"
